# local-data-pipeline

./: README.md  data_pipeline.py  functions.py  pyproject.toml  requirements.txt
.github/workflows/: data_pipeline.yml
