[project]
name = "etl-airflow"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.12.0",
    "ipykernel>=7.1.0",
    "pathlib>=1.0.1",
    "polars>=1.36.1",
    "sentence-transformers>=5.2.0",
    "youtube-transcript-api>=1.2.3",
]
